# bipedal-rehab-rdc

./: .gitignore  README.md
notebooks/: LSTM_GRP_RDC.ipynb  LSTM_GRP_RDC_V2.ipynb  LSTM_GRP_RDC_V3.ipynb
src/rehabrobo_control/: CMakeLists.txt  package.xml
src/rehabrobo_control/config/: config.rviz  robot_controller.yaml
src/rehabrobo_control/launch/: rehabrobo_control.launch.py  rehabrobo_full.launch.py
src/rehabrobo_control/model/: model.urdf
src/rehabrobo_control/scripts/: command_mixer.py  data_logger.py  disturbance_injector.py  error_monitor.py  live_plotter.py  ml_data_collector.py  residual_dynamics_compensator.py  walking_publisher.py
